--- a/src/components/NewArticle/NewArticle.module.css
+++ b/src/components/NewArticle/NewArticle.module.css
@@ -53,3 +53,13 @@
   transition: all 0.5s;
 }
 
+.submitButton:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.invalidInfo {
+  color: #ff0000;
+  font-size: 14px;
+}
+
