--- a/src/components/Comments/NewComment.module.css
+++ b/src/components/Comments/NewComment.module.css
@@ -11,8 +11,37 @@
   width: 100%;
   height: 100px;
   margin-bottom: 15px;
+  font-family: 'Arial', sans-serif;
+  font-size: 14px;
 }
 
 .submitButton {
-  margin-right: 15px;
+  border: 2px solid #505590;
+  background-color: #505590;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px 30px;
+  margin-right: 30px;
+  transition: all 0.5s;
+}
+
+.clearButton {
+  border: 2px solid #505590;
+  color: #505590;
+  background-color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px 30px;
+  transition: all 0.5s;
+}
+
+.submitButton:hover,
+.clearButton:hover {
+  opacity: 0.65;
+  transition: all 0.5s;
 }
