--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -1,25 +1,70 @@
 .header {
   padding: 40px;
+  background-color: #111;
 }
 
-.nav {
-  background-color: #f0f0f0;
+.header__top {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+.header__info {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  height: 30px;
+  width: 30px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
-.header-list {
+.header__info span {
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff;
+}
+
+.header__nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__nav ul {
+  background-color: #111;
+}
+
+.header__nav a {
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.header__nav a:hover,
+.header__nav a:active,
+.header__nav a.active {
+  color: #ccc;
+  font-weight: 700;
+}
+
+.header__list {
   padding-left: 15px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
 }
 
-.header-item {
-  padding: 20px;
+.header__item {
+  padding: 30px 20px 0;
 }
 
-.header-item button {
+.header__item button {
   border: none;
   background-color: transparent;
   font-size: 20px;
@@ -29,7 +74,11 @@
   cursor: pointer;
 }
 
-.header-item button:hover {
+.header__item button:hover {
   opacity: 0.8;
   color: #741564;
+}
+
+.header__add {
+  margin: 30px 0 0;
 }
