--- a/src/components/NewsContent/FirstPriorityItem.module.css
+++ b/src/components/NewsContent/FirstPriorityItem.module.css
@@ -4,6 +4,15 @@
   justify-content: space-between;
 }
 
+.news__content-info_visited {
+  opacity: 0.65;
+}
+
+.news__content-info a {
+  text-decoration: none;
+  color: #000000;
+}
+
 .news__img-wrapper {
   width: 460px;
   margin-right: 30px;
@@ -24,4 +33,12 @@
   line-height: 24px;
   padding-right: 40px;
   font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.news__date {
+  font-weight: 300;
+  color: #666666;
+  font-size: 14px;
+  display: block;
 }
