--- a/src/components/NewsContent/SecondPriorityItem.module.css
+++ b/src/components/NewsContent/SecondPriorityItem.module.css
@@ -4,6 +4,15 @@
   max-width: 300px;
 }
 
+.news__content-info_visited {
+  opacity: 0.65;
+}
+
+.news__content-info a {
+  text-decoration: none;
+  color: #000000;
+}
+
 .news__content-info_small {
   width: 220px;
 }
@@ -27,5 +36,13 @@
 
 .news__info h2 {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
+  margin-bottom: 12px;
+}
+
+.news__date {
+  display: block;
+  font-size: 14px;
+  font-weight: 300;
+  color: #666666;
 }
