--- a/src/components/Layout/Info.module.css
+++ b/src/components/Layout/Info.module.css
@@ -10,13 +10,14 @@
 }
 
 .info__close span {
+  display: block;
   width: 42px;
   height: 2px;
   position: absolute;
   top: 50%;
   left: -15%;
-  background-color: #ffffff;
-  display: block;
+  background-color: #e2e2f7;
+  transition: all 0.5s;
 }
 
 .info__close span:first-child {
@@ -25,6 +26,11 @@
 
 .info__close span:last-child {
   transform: rotate(-45deg);
+}
+
+.info__close:hover span {
+  height: 4px;
+  transition: all 0.5s;
 }
 
 .info__content {
@@ -43,48 +49,18 @@
   vertical-align: top;
 }
 
-.info__rubrics ul {
-  background-color: transparent;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.info__item {
-  margin: 0 20px 13px 0;
-}
-
 .info__rubrics a,
-.info__contacts-item a {
+.info__contacts a {
   text-decoration: none;
-  color: #ffffff;
+  color: #e2e2f7;
   font-size: 18px;
   font-weight: 500;
 }
 
 .info__rubrics a:hover,
 .info__rubrics a:active,
-.info__contacts-item a:hover,
-.info__contacts-item a:active,
-.info__rubrics .active {
+.info__contacts a:hover,
+.info__contacts a:active {
   font-weight: 600;
-}
-
-.info__contacts-serv {
-  display: flex;
-  flex-direction: row;
-}
-
-.info__contacts-item:first-child {
-  margin-right: 40px;
-}
-
-.info__contacts-social ul {
-  background-color: transparent;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 20px;
-}
-
-.info__contacts-social li {
-  margin-right: 20px;
+  color: #dadaf0;
 }
