--- a/src/components/NewsContent/NewsContent.module.css
+++ b/src/components/NewsContent/NewsContent.module.css
@@ -5,7 +5,7 @@ h1 {
 }
 
 .content {
-  padding: 20px 40px;
+  padding: 20px 0;
   background-color: #f0f0f0;
 }
 
@@ -13,22 +13,44 @@ h1 {
   margin-bottom: 80px;
 }
 
-ul {
-  padding-left: 0;
+.content ul {
+  padding: 0 20px;
   background-color: #f0f0f0;
 }
 
+.content li {
+  padding: 20px;
+  transition: all 0.5s;
+}
+
+.content li:hover {
+  background-color: #e1e0e0;
+  color: #4f4f4f;
+  transition: all 0.5s;
+}
+
+.content li a {
+  text-decoration: none;
+  color: #000000;
+  transition: all 0.5s;
+}
+
+.content li:hover a {
+  color: #4f4f4f;
+  transition: all 0.5s;
+}
+
 .firstPriority {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .secondPriority {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .secondPriority:last-child {
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
