--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -29,8 +29,8 @@
   left: 0;
   right: 0;
   min-width: 1180px;
-  background-color: #111111;
-  color: #ffffff;
+  background-color: #101040;
+  color: #e2e2f7;
   padding: 70px 0 40px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
