date_today_yesterday

--- a/src/components/NewsContent/NewsContent.module.css
+++ b/src/components/NewsContent/NewsContent.module.css
@@ -54,3 +54,10 @@ h1 {
 .secondPriority:last-child {
   margin-bottom: 10px;
 }
+
+.date {
+  margin: 0 40px;
+  padding: 20px 0;
+  color: #5e5e5e;
+  font-size: 24px;
+}
