--- a/src/components/Layout/NewsRubrics.module.css
+++ b/src/components/Layout/NewsRubrics.module.css
@@ -1,14 +1,14 @@
-.rubricList {
+.rubric-list {
   background-color: transparent;
   display: flex;
   flex-wrap: wrap;
 }
 
-.rubricItem {
+.rubric-item {
   margin: 0 20px 13px 0;
 }
 
-.rubricItem .active {
+.rubric-item .active {
   font-weight: 600;
   color: #dadaf0;
 }
