--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -7,23 +7,23 @@
   width: 100%;
   height: 100vh;
   z-index: 20;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgb(0 0 0 / 75%);
 }
 
-.modalStatus {
+.modal-status {
   position: fixed;
   top: 20vh;
   left: 25%;
   width: 50%;
-  background-color: #eeeeee;
+  background-color: #eee;
   padding: 20px;
   border-radius: 15px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 8px rgb(0 0 0 / 25%);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
 }
 
-.modalInfo {
+.modal-info {
   position: absolute;
   top: 0;
   left: 0;
@@ -32,7 +32,7 @@
   background-color: #101040;
   color: #e2e2f7;
   padding: 70px 0 40px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 8px rgb(0 0 0 / 25%);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
 }
@@ -42,6 +42,7 @@
     opacity: 0;
     transform: translateY(-3rem);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
