--- a/src/components/Comments/NewComment.module.scss
+++ b/src/components/Comments/NewComment.module.scss
@@ -1,9 +1,9 @@
 .name {
   margin-bottom: 15px;
-}
 
-.name label {
-  margin-right: 15px;
+  label {
+    margin-right: 15px;
+  }
 }
 
 .text {
@@ -26,11 +26,11 @@
   padding: 10px 30px;
   margin-right: 30px;
   transition: all 0.5s;
-}
 
-.submit:disabled {
-  cursor: not-allowed;
-  opacity: 0.65;
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.65;
+  }
 }
 
 .clear {
