--- a/src/components/Layout/Contacts.module.scss
+++ b/src/components/Layout/Contacts.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-}
 
-.contacts__item:first-child {
-  margin-right: 40px;
+  &__item {
+    margin-right: 40px;
+  }
 }
