--- a/src/components/NewArticle/NewArticle.module.scss
+++ b/src/components/NewArticle/NewArticle.module.scss
@@ -1,25 +1,26 @@
 .control {
   margin: 10px 0;
-}
 
-.control label {
-  display: block;
-  margin-bottom: 10px;
-}
+  label {
+    display: block;
+    margin-bottom: 10px;
+  }
 
-.control input, textarea {
-  width: 100%;
-  border-radius: 5px;
-}
+  input,
+  textarea {
+    width: 100%;
+    border-radius: 5px;
+  }
 
-.control input {
-  height: 20px;
-}
+  input {
+    height: 20px;
+  }
 
-.control textarea {
-  resize: none;
-  font-family: 'Arial', sans-serif;
-  font-size: 14px;
+  textarea {
+    resize: none;
+    font-family: "Arial", sans-serif;
+    font-size: 14px;
+  }
 }
 
 .brief {
@@ -32,10 +33,10 @@
 
 .select {
   margin: 10px 0;
-}
 
-.select label {
-  margin-right: 15px;
+  label {
+    margin-right: 15px;
+  }
 }
 
 .submit {
@@ -49,25 +50,25 @@
   cursor: pointer;
   border-radius: 10px;
   transition: all 0.5s;
-}
 
-.submit:hover {
-  opacity: 0.6;
-  transition: all 0.5s;
-}
+  &:hover {
+    opacity: 0.6;
+    transition: all 0.5s;
+  }
 
-.submit:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
+
+  &-msg {
+    font-size: 18px;
+  }
 }
 
 .invalid-info {
   color: #f00;
   font-size: 14px;
-}
-
-.submit-msg {
-  font-size: 18px;
 }
 
 .modal-buttons {
@@ -87,16 +88,16 @@
   text-decoration: none;
   cursor: pointer;
   transition: all 0.5s;
-}
 
-.modal-button:first-child {
-  margin-right: 30px;
-}
+  &:first-child {
+    margin-right: 30px;
+  }
 
-.modal-button:hover {
-  opacity: 0.7;
-  font-weight: 500;
-  transition: all 0.5s;
+  &:hover {
+    opacity: 0.7;
+    font-weight: 500;
+    transition: all 0.5s;
+  }
 }
 
 .error {
