--- a/src/components/Layout/Social.module.scss
+++ b/src/components/Layout/Social.module.scss
@@ -5,9 +5,6 @@
   max-width: 400px;
 
   &__networks {
-    display: block;
-    height: 36px;
-    width: 36px;
     transition: all 0.5s;
   
     ul {
@@ -19,11 +16,17 @@
   
     li {
       margin-right: 20px;
-    }
-  
-    &:hover {
-      opacity: 0.65;
-      transition: all 0.5s;
+
+      a {
+        height: 30px;
+        width: 30px;
+        display: block;
+
+        &:hover {
+          opacity: 0.65;
+          transition: all 0.5s;
+        }
+      }
     }
   }
   
@@ -43,7 +46,7 @@
   }
 }
 
-.social__network .apps {
+.apps {
   ul {
     background-color: transparent;
     margin-top: 15px;
