--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -11,6 +11,7 @@
     width: 100%;
     border-radius: 5px;
     border: 1px solid #94928b;
+    padding: 5px;
 
     &:hover {
       border-color: #686b6f;
@@ -22,7 +23,7 @@
   }
 
   input {
-    height: 20px;
+    height: 32px;
   }
 
   textarea {
