--- a/src/components/UI/Select/Select.module.scss
+++ b/src/components/UI/Select/Select.module.scss
@@ -20,7 +20,7 @@
     flex-direction: row;
     align-items: center;
     position: relative;
-    height: 20px;
+    height: 32px;
     width: 300px;
 
     &_multi {
@@ -34,6 +34,7 @@
       height: 100%;
       width: 100%;
       border-radius: 5px;
+      padding: 5px 30px 5px 5px;
       border: 1px solid #94928b;
 
       &:hover {
