--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -1,12 +1,14 @@
 .header {
-  padding: 40px 0;
+  padding: 20px 0 40px;
   background-color: #101040;
   width: 100%;
+  position: relative;
 
   &__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: calc(100% - 150px);
     color: #e2e2f7;
   }
 
@@ -35,27 +37,20 @@
     }
   }
 
+  &__logo {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+  }
+
   &__nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: calc(100% - 150px);
 
     ul {
       background-color: transparent;
-    }
-
-    a {
-      text-decoration: none;
-      font-size: 20px;
-      font-weight: 500;
-      color: #e2e2f7;
-
-      &:hover,
-      &:acrtive,
-      &.active {
-        color: #dadaf0;
-        font-weight: 700;
-      }
     }
   }
 
@@ -64,6 +59,14 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+  }
+
+  &__weather {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 125px;
+    width: 125px;
   }
 
   &__item {
@@ -84,7 +87,29 @@
     }
   }
 
-  &__add {
-    margin: 30px 0 0;
+  a {
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 500;
+    color: #e2e2f7;
+    transition: all 300ms;
+
+    &:hover,
+    &:active,
+    &.active {
+      color: #dadaf0;
+      opacity: 0.8;
+      transition: all 300ms;
+    }
+  }
+
+  &__auth {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 15px;
+    
+    a {
+      font-size: 16px;
+    }
   }
 }
