--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,7 @@
   src: url("../src/fonts/TTF/OnestMedium1602-hint.ttf") format("truetype");
   font-weight: 600;
   font-display: swap;
-  font-style: normal;
-  unicode-range: u+0030-0039, u+0400-045f, u+0490-0491, u+04b0-04b1, u+2116;
-}
+  font-style: normal;}
 
 @font-face {
   font-family: "Onest";
@@ -15,7 +13,6 @@
   font-weight: 500;
   font-display: swap;
   font-style: normal;
-  unicode-range: u+0030-0039, u+0400-045f, u+0490-0491, u+04b0-04b1, u+2116;
 }
 
 @font-face {
@@ -25,7 +22,6 @@
   font-weight: 700;
   font-display: swap;
   font-style: normal;
-  unicode-range: u+0030-0039, u+0400-045f, u+0490-0491, u+04b0-04b1, u+2116;
 }
 
 @font-face {
@@ -35,7 +31,6 @@
   font-weight: 800;
   font-display: swap;
   font-style: normal;
-  unicode-range: u+0030-0039, u+0400-045f, u+0490-0491, u+04b0-04b1, u+2116;
 }
 
 @font-face {
@@ -45,7 +40,6 @@
   font-weight: 900;
   font-display: swap;
   font-style: normal;
-  unicode-range: u+0030-0039, u+0400-045f, u+0490-0491, u+04b0-04b1, u+2116;
 }
 
 @font-face {
@@ -55,7 +49,6 @@
   font-weight: 300;
   font-display: swap;
   font-style: normal;
-  unicode-range: u+0030-0039, u+0400-045f, u+0490-0491, u+04b0-04b1, u+2116;
 }
 
 @font-face {
@@ -65,7 +58,6 @@
   font-weight: 400;
   font-display: swap;
   font-style: normal;
-  unicode-range: u+0030-0039, u+0400-045f, u+0490-0491, u+04b0-04b1, u+2116;
 }
 
 * {
