--- a/src/components/Comments/CommentsList.module.scss
+++ b/src/components/Comments/CommentsList.module.scss
@@ -21,26 +21,73 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 25px;
   }
 
   &__date {
     color: #777;
+
+    > span {
+      position: relative;
+
+      &:hover {
+        .hint {
+          color: #000;
+          font-size: 14px;
+          text-align: center;
+          right: 0;
+          display: inline-block;
+        }
+      }
+    }
+  }
+
+  &__editbutton {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+
+    img {
+      width: 18px;
+      height: 18px;
+      transition: opacity 500ms;
+    }
+
+    &:hover {
+      img {
+        opacity: 0.6;
+      }
+
+      .hint {
+        display: inline-block;
+      }
+    }
   }
 
   &__delbutton {
+    position: relative;
     width: 24px;
     height: 24px;
     border: none;
     background-color: transparent;
     cursor: pointer;
-    background-image: url("../../img/delete.svg");
-    background-size: cover;
-    margin-right: 25px;
-    transition: all 500ms;
+
+    img {
+      width: 22px;
+      transition: opacity 500ms;
+    }
 
     &:hover {
-      opacity: 0.5;
-      transition: all 500ms;
+      img {
+        opacity: 0.6;
+      }
+
+      .hint {
+        display: inline-block;
+      }
     }
 
     &:disabled {
@@ -48,6 +95,62 @@
       cursor: not-allowed;
     }
   }
+
+  &__edit-buttons {
+    display: flex;
+    gap: 20px;
+    margin-top: 25px;
+    margin-bottom: 20px;
+  }
+
+  &__save-edit {
+    border: 1px solid #505590;
+    background-color: #505590;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 8px;
+    padding: 6px 15px;
+    transition: all 0.5s;
+
+    &:disabled {
+      cursor: not-allowed;
+      opacity: 0.65;
+    }
+  }
+
+  &__cancel-edit {
+    border: 1px solid #505590;
+    color: #505590;
+    background-color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 8px;
+    padding: 6px 15px;
+    transition: all 0.5s;
+  }
+
+  &__save-edit,
+  &__cancel-edit {
+    &:hover {
+      opacity: 0.65;
+      transition: all 0.5s;
+    }
+  }
+}
+
+.hint {
+  position: absolute;
+  display: none;
+  bottom: 30px;
+  right: -40px;
+  padding: 2px 5px;
+  border: 1px solid #4e4e4f;
+  border-radius: 2px;
+  white-space: nowrap;
+  background-color: #fff;
 }
 
 .error {
