--- a/src/components/UI/Reactions/Reactions.module.scss
+++ b/src/components/UI/Reactions/Reactions.module.scss
@@ -36,4 +36,23 @@
     font-size: 16px;
     padding-right: 4px;
   }
+
+  @keyframes reaction {
+    0% {
+      opacity: 0.5;
+      transform: scale(1);
+    }
+    50% {
+      opacity: 0.75;
+      transform: scale(1.8);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  &__changed {
+    animation: reaction 1s ease-in-out;
+  }
 }
