--- a/src/components/Article/ArticleContent.module.scss
+++ b/src/components/Article/ArticleContent.module.scss
@@ -72,19 +72,19 @@
     display: flex;
     gap: 20px;
 
-    button, a {
+    button {
       position: relative;
       border: none;
       cursor: pointer;
       background-color: transparent;
       display: flex;
+      align-items: center;
+      font-size: 14px;
       gap: 15px;
       transition: opacity 500ms;
 
       &:hover {
-        img {
-          opacity: 0.6;
-        }
+        opacity: 0.7;
   
         .hint {
           display: none;
