--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -15,7 +15,7 @@
 
       &:hover,
       &:active {
-        font-weight: 600;
+        text-decoration: underline;
         color: #dadaf0;
       }
     }
